projet/traefik/traefik_service.yaml
apiVersion: v1
kind: Service
metadata:
 name: traefik
 namespace: traefik
spec:
 selector:
   k8s-app: traefik-ingress-lb
 ports:
   - protocol: TCP
     name: web
     port: 80
     # targetPort: 8080
   - protocol: TCP
     name: admin
     port: 8080
     # - protocol: TCP
     #name: websecure
     #port: 443
     #targetPort: 443
